--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,7 +38,36 @@
 
     <body id="page-top" data-spy="scroll" data-target=".navbar">
         
-        {% block body %}{% endblock %}
+        {% block body %}
+            {% block nav %}
+                <!-- ========== Navigation ========== -->
+
+        <nav class="navbar navbar-default navbar-fixed-top navbar-inverse navbar-trans is-home navbar-fw" role="navigation">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- Logo -->
+                <a class="navbar-brand" href="/"><img src="{{ asset('img/logo-light.png') }}"></a>
+            </div>
+
+            <!-- Navbar Links -->
+            <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
+                <ul class="nav navbar-nav">
+                    <li><a href="{{ path('crw_platform_homepage') }}">Accueil<span class="sr-only"></span></a></li>
+                    <li><a href="{{ path('crw_platform_contact') }}">Annonces<span class="sr-only"></span></a></li>
+                    <li><a href="{{ path('crw_platform_about') }}">A Propos<span class="sr-only"></span></a></li>
+                    <li><a href="{{ path('crw_platform_faq') }}">FAQ<span class="sr-only"></span></a></li>
+                    <li><a href="{{ path('crw_platform_contact_index') }}">Contact<span class="sr-only"></span></a></li>
+                    <li><a href="{{ path('crw_platform_contact') }}">Connexion<span class="sr-only"></span></a></li>
+                </ul><!-- / .nav .navbar-nav -->
+            </div><!--/.navbar-collapse -->
+        </nav><!-- / .navbar -->
+            {% endblock %}
+        {% endblock %}
 
         {# inclus le footer #}
         {% block footer %}
