--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- Logo -->
-                <a class="navbar-brand" href="/"><img src="{{ asset('img/logo-light.png') }}"></a>
+                <a class="navbar-brand" href="/"><img src="{{ asset('img/logo.svg') }}" style="width: 75px;"></a>
             </div>
 
             <!-- Navbar Links -->
@@ -59,7 +59,7 @@
                     <div class="hero-content-wrapper">
                         <div class="hero-content">
 
-                            <img src="{{ asset('img/hero/ag2-logo.png') }}" alt="Presentation">
+                            <img src="{{ asset('img/logo.svg') }}" alt="Presentation"  style="width: 170px;">
                             <h1 class="hero-lead">E-Mobilier</h1>
                             <h4 class="h-alt hero-secondary">Agence de regroupement d'annonces immobilières</h4>
                             <a href="#annonce" class="btn btn-light">Voir les annonces</a>
