--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -51,7 +51,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- Logo -->
-                <a class="navbar-brand" href="/"><img src="{{ asset('img/logo-light.png') }}"></a>
+                <a class="navbar-brand" href="{{ path('crw_platform_homepage') }}"><img src="{{ asset('img/logo-light.png') }}"></a>
             </div>
 
             <!-- Navbar Links -->
@@ -66,6 +66,7 @@
                 </ul><!-- / .nav .navbar-nav -->
             </div><!--/.navbar-collapse -->
         </nav><!-- / .navbar -->
+
             {% endblock %}
         {% endblock %}
 
