--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -51,7 +51,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- Logo -->
-                <a class="navbar-brand" href="/"><img src="{{ asset('img/logo-light.png') }}"></a>
+                <a class="navbar-brand" href="/"><img src="{{ asset('img/logo.svg') }}"></a>
             </div>
 
             <!-- Navbar Links -->
