--- a/web/css/scss/_headers.scss
+++ b/web/css/scss/_headers.scss
@@ -135,7 +135,7 @@
 
 /* ---- 4.5 Header/Page Title Parallax ---- */
 .pt-plax-md-dark {
-	background: url(http://placehold.it/2440x1280);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 	background-position: 50%;
 
@@ -151,7 +151,7 @@
 }
 
 .pt-plax-md-light {
-	background: url(http://placehold.it/2440x1280);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 
 	&:before {
@@ -166,7 +166,7 @@
 }
 
 .pt-plax-lg-dark {
-	background: url(http://placehold.it/2440x1280);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 
 	&:before {
@@ -181,7 +181,7 @@
 }
 
 .pt-plax-lg-light {
-	background: url(http://placehold.it/2440x1280);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 
 	&:before {
