--- a/web/css/scss/_hero.scss
+++ b/web/css/scss/_hero.scss
@@ -143,7 +143,7 @@
 	position: relative;
 	width: 100%;
 	height: 100vh;
-	background: url(http://placehold.it/2440x1578);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 	background-attachment: fixed;
 
@@ -228,7 +228,7 @@
 
 
 .fs-slide-1 {
-	background: url(http://placehold.it/2440x1578);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 
 	.bg-overlay {
@@ -255,7 +255,7 @@
 }
 
 .fs-slide-2 {
-	background: url(http://placehold.it/2440x1578);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 
 	.bg-overlay {
@@ -286,7 +286,7 @@
 }
 
 .fs-slide-3 {
-	background: url(http://placehold.it/2440x1578);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 
 	.bg-overlay {
@@ -357,7 +357,7 @@
 	}
 
 	.fw-slide-1 {
-		background: url(http://placehold.it/2440x1578);
+		background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 		background-size: cover;
 		background-position: 50%;
 
@@ -387,7 +387,7 @@
 	} // .fw-slide-1
 
 	.fw-slide-2 {
-		background: url(http://placehold.it/2440x1578);
+		background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 		background-size: cover;
 		background-position: 50%;
 
@@ -420,7 +420,7 @@
 
 	.fw-slide-3 {
 		@extend .fw-slide-1;
-		background: url(http://placehold.it/2440x1578);
+		background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 		background-size: cover;
 		background-position: 50%;
 
@@ -446,7 +446,7 @@
 /* ---- 20.4 Full Screen Video ---- */
 .fs-video-hero {
 	@extend .main-demo-hero;
-	background: url(http://placehold.it/2440x1578);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 
 	.bg-overlay {
@@ -507,7 +507,7 @@
 /* ---- 20.6 Text Slider ---- */
 .text-slider-hero {
 	@extend .main-demo-hero;
-	background: url(http://placehold.it/2440x1578);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 	background-position: 50%;
 
@@ -545,7 +545,7 @@
 /* ---- 20.7 Freelancer ---- */
 .freelancer-hero {
 	@extend .main-demo-hero;
-	background: url(http://placehold.it/2440x1578);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 	background-position: 40%;
 	background-attachment: fixed;
@@ -623,7 +623,7 @@
 
 .agency2-hero {
 	@extend .main-demo-hero;
-	background: url(http://placehold.it/2440x1578);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 	background-position: 50%;
 	background-attachment: fixed;
@@ -682,7 +682,7 @@
 /* ---- 20.9 Animated Heading ---- */
 .animated-hero {
 	@extend .main-demo-hero;
-	background: url(http://placehold.it/2440x1578);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 	background-position: 50%;
 	background-attachment: fixed;
@@ -802,7 +802,7 @@
 	position: relative;
 	width: 100%;
 	height: 100vh;
-	background: url(http://placehold.it/2440x1578);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 	background-position: 40%;
 	background-attachment: fixed;
@@ -917,7 +917,7 @@
 .web-app-hero {
 	@extend .main-demo-hero;
 
-	background: url(http://placehold.it/2440x1578);
+	background: url(http://www.gifpromotion.fr/media//programme_immobilier_houilles_78__villa_adelaide__096916600_1215_15012016.jpg);
 	background-size: cover;
 	background-position: 50%;
 	background-attachment: fixed;
