--- a/web/css/scss/_shop.scss
+++ b/web/css/scss/_shop.scss
@@ -71,6 +71,17 @@
 			z-index: 101;
 		}
 
+		.location-label {
+			position: absolute;
+			top: 10px;
+			left: 10px;
+			font-size: 13px;
+			font-weight: 600;
+			letter-spacing: 0.8px;
+			background: #0BBE30;
+			z-index: 101;
+		}
+
 		.buy-btn {
 			display: inline-block;
 			position: absolute;
