Contact Next to Finish

--- a/src/CRW/PlatformBundle/Resources/views/About/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/About/index.html.twig
@@ -1,12 +1,16 @@
 {% extends 'base.html.twig' %}
 
+{% set active = 0 %}
+
+{% block nav %}
+  {{ parent() }}
+
+  
+{% endblock %}
+
 {% block body %} 
  
-    {% block nav %}
-
-      {{ parent() }}
-      
-    {% endblock %}
+    
     <!-- ========== About - Section ========== -->
 
     <section id="about" class="container">
