modification texte page accueil

--- a/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/Default/index.html.twig
@@ -67,27 +67,27 @@
                 <!-- Item 1 -->
                 <div class="col-lg-4 col-md-6 mb-sm-50">
                     <div class="ft-item wow fadeInUp" data-wow-duration="1s" style="visibility: visible; animation-duration: 1s; animation-name: fadeInUp;">
-                        <span class="linea-arrows-circle-check"></span>
+                        <span class="et-browser"></span>
                         <h4>Ergonomie</h4>
-                        <p>Un design simple avec  des fonctionnalités accessibles et aisées d’utilisation pour une mise en contact facilitée.</p>
+                        <p>e-mobilier vous propose une plateforme au design simple avec des fonctionnalitées aisément accessibles à tous quelque soit votre niveau en informatique. Quelques étapes simples vous suffisent à créer votre compte et à commencer votre aventure e-mobilier!</p>
                     </div>
                 </div>
 
                 <!-- Item 2 -->
                 <div class="col-lg-4 col-md-6 mb-sm-50">
-                    <div class="ft-item wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.3s; animation-name: fadeInUp;">
-                        <span class="linea-basic-webpage-img-txt"></span>
-                        <h4>Facilité</h4>
-                        <p>Quelques étapes simples vous suffisent à créer votre compte, à poster votre annonce et à entrer en contact.</p>
+                    <div class="ft-item wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.6s; animation-name: fadeInUp;">
+                        <span class="linea-basic-clock"></span>
+                        <h4>Gain de temps</h4>
+                        <p>Gagnez du temps ! <br />e-mobilier se charge de votre prospection pour vous.<br /> Professionnels, vos clients sont à votre portée. Particuliers, ne cherchez plus,  les mandataires inscrits sont là pour vous faire profiter de leur expertise.</p>
                     </div>
                 </div>
 
                 <!-- Item 3 -->
                 <div class="col-lg-4 col-md-6 mb-sm-50">
-                    <div class="ft-item wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.6s; animation-name: fadeInUp;">
-                        <span class="linea-basic-mail"></span>
-                        <h4>Praticité</h4>
-                        <p>Entre en contact avec les professionnels  de votre choix grâce à notre messagerie interne. Fini les échanges interminables par mail ! </p>
+                    <div class="ft-item wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.3s; animation-name: fadeInUp;">
+                        <span class="et-happy"></span>
+                        <h4>Facilité</h4>
+                        <p>Grace à notre messagerie interne, entrez en contact rapidement et facilement. Fini les échanges interminables qui se perdent dans vos boîtes mails ! e-mobilier vous propose de simplifier vos conversations de professionnels à particuliers pour plus de facilité.</p>
                     </div>
                 </div>
 
