--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -51,11 +51,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- Logo -->
-<<<<<<< HEAD
-                <a class="navbar-brand" href="{{ path('crw_platform_homepage') }}"><img src="{{ asset('img/logo-light.png') }}"></a>
-=======
-                <a class="navbar-brand" href="/"><img src="{{ asset('img/logo.svg') }}"></a>
->>>>>>> css_homepage
+                <a class="navbar-brand" href="{{ path('crw_platform_homepage') }}"><img src="{{ asset('img/logo.svg') }}"></a>
             </div>
 
             <!-- Navbar Links -->
