--- a/web/css/scss/_navigation.scss
+++ b/web/css/scss/_navigation.scss
@@ -409,8 +409,8 @@
 
 /* ---- Navbar Inverse (Dark) ---- */
 .navbar-inverse {
-	border-bottom: 1px solid $navbar-inverse-border-color;
-	background: $navbar-inverse-background;
+	border-bottom: 1px solid rgb(26, 27, 53);
+	background: rgb(26, 27, 53);
 
 	.navbar-nav {
 		
