--- a/web/css/scss/_footers.scss
+++ b/web/css/scss/_footers.scss
@@ -4,7 +4,7 @@
 
 
 .copyright {
-	background: $footer-copyright-bg;
+	background: white;
 	padding-top: 20px;
 	padding-bottom: 20px;
 
@@ -91,7 +91,7 @@
 
 /* ---- 7.1 Footer Widgets ---- */
 .footer-widgets {
-	background: $dark;
+	background: rgb(26, 27, 53);
 
 	.widget {
 
@@ -122,7 +122,7 @@
 				font-size: 22px;
 
 				a {
-					color: $gray;
+					color: white;
 
 					&:hover {
 						color: $light;
@@ -132,11 +132,15 @@
 		}
 
 		a {
-			color: #777;
+			color: white;
 
 			&:hover {
 				color: rgb(248, 248, 248);
 			}
+		}
+
+		p {
+			color:white;
 		}
 	} // .about-widget
 
