--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -1,35 +1,8 @@
 {% extends 'base.html.twig' %}
 
+{% set active = 0 %}
+    
 {% block body %}
-
-    {% block nav %}
-        <!-- ========== Navigation ========== -->
-
-        <nav class="navbar navbar-default navbar-fixed-top navbar-inverse navbar-trans  navbar-fw" role="navigation">
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <!-- Logo -->
-                <a class="navbar-brand" href="/"><img src="{{ asset('img/logo-light.png') }}"></a>
-            </div>
-
-            <!-- Navbar Links -->
-            <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
-                <ul class="nav navbar-nav">
-                    <li><a href="/">Accueil<span class="sr-only"></span></a></li>
-                    <li><a href="/annonce">Annonces<span class="sr-only"></span></a></li>
-                    <li><a href="/apropos">A Propos<span class="sr-only"></span></a></li>
-                    <li><a href="/FAQ">FAQ<span class="sr-only"></span></a></li>
-                    <li><a href="/contact">Contact<span class="sr-only"></span></a></li>
-                    <li><a href="/login">Connexion<span class="sr-only"></span></a></li>
-                </ul><!-- / .nav .navbar-nav -->
-            </div><!--/.navbar-collapse -->
-        </nav><!-- / .navbar -->
-    {% endblock %}
 
     <div>
         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
